[package]
name = "strontium"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "strontium"
path = "../src/main.rs"

[dependencies]
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = "2"
sha2 = "0.10"
curve25519-dalek = { version = "4.1", default-features = false, features = ["alloc"] }
bs58 = "0.5"
libc = "0.2"

[workspace]
