[package]
name = "strontium"
version = "0.2.1"
edition = "2021"

[[bin]]
name = "strontium"
path = "src/main.rs"

[dependencies]
bs58             = "0.5"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
sha2             = "0.10"
curve25519-dalek = { version = "4", default-features = false, features = ["digest"] }
ed25519-dalek    = { version = "2", features = ["rand_core"] }
ureq             = { version = "2", features = ["json"] }
libc             = "0.2"
base64           = "0.21"

[profile.release]
opt-level = "z"
lto       = true
strip     = true
panic     = "abort"
